# wlroots-rs

./: .build.yml  .gitmodules  .travis.yml  Cargo.toml
examples/: pointer.rs  rotation.rs  tablet.rs  touch.rs  xdg_shell_v6_test.rs
src/: compositor.rs  lib.rs  macros.rs
src/events/: xwayland_events.rs
src/extensions/: export_dmabuf.rs  gamma_control.rs  gtk_primary_selection.rs  idle.rs  idle_inhibit.rs  input_inhibit.rs  mod.rs  screencopy.rs  server_decoration.rs  virtual_keyboard.rs
src/manager/: input_manager.rs  keyboard_handler.rs  layer_shell_handler.rs  layer_shell_manager.rs  mod.rs  output_handler.rs  output_manager.rs  pointer_handler.rs  switch_handler.rs  tablet_pad_handler.rs  tablet_tool_handler.rs  touch_handler.rs  wl_shell_handler.rs  wl_shell_manager.rs  xdg_shell_handler.rs  xdg_shell_manager.rs  xdg_shell_v6_handler.rs  xdg_shell_v6_manager.rs
src/render/: pixman_region.rs  renderer.rs
src/types/: dmabuf.rs
src/types/cursor/: cursor.rs
src/types/data_device/: manager.rs
src/types/input/: input_device.rs  switch.rs
src/types/output/: damage.rs  layout.rs  mode.rs  output.rs
src/types/seat/: seat.rs
src/types/shell/: layer_shell.rs  mod.rs  xdg_shell.rs  xdg_shell_v6.rs
src/types/surface/: subsurface.rs  surface.rs
src/utils/: region.rs
src/xwayland/: hints.rs  manager.rs  surface.rs
wlroots-sys/: Cargo.toml  build.rs
wlroots-sys/examples/: simple.rs
wlroots-sys/src/: lib.rs  wlroots.h
