[package]
name = "wlroots-sys"
version = "0.0.0"
authors = ["Timidger <APragmaticPlace@gmail.com>"]
description = "Bindgen generated low-level wlc wrapper"
keywords = ["wayland", "compositor", "bindings"]
categories = ["external-ffi-bindings"]
license = "MIT"
exclude = [".travis.yml"]

build = "build.rs"

[build-dependencies]
bindgen = "^0.23.1"
cmake = { version = "^0.1.22", optional = true }

# This is for the example
gl_generator = "0.5.0"

[dependencies]
libc = "^0.2.21"
wayland-sys = { version = "0.9.*", features = ["client", "dlopen", "server"] }
wayland-server = { version = "0.9.*" }

[features]
static = ["cmake"]
