[package]
name = "wlroots-sys"
version = "0.4.0"
authors = ["Timidger <APragmaticPlace@gmail.com>"]
description = "Bindgen generated low-level wlroots wrapper"
keywords = ["wayland", "compositor", "bindings"]
categories = ["external-ffi-bindings"]
license = "MIT"
exclude = ["wlroots/.travis.yml"]

build = "build.rs"

[build-dependencies]
bindgen = "0.53.*"
meson = { version = "1.0", optional = true }
wayland-scanner = "0.25.*"
# For building optional dependencies:
pkg-config = "0.3.*"

[dependencies]
libc = "^0.2.*"
wayland-commons = "0.25.*"
wayland-server = "0.25.*"
wayland-client = "0.25.*"
wayland-sys = { version = "0.25.*", features = ["dlopen", "server"] }

[features]
default = ["libcap", "systemd", "elogind", "xwayland", "x11_backend"]
static = ["meson"]
pixman = []
libcap = []
systemd = []
elogind = []
x11_backend = []
xwayland = []
xcb_errors = []
xcb_icccm = []
unstable = []
